# dfler

./: README.md  pyproject.toml  requirements.txt
.github/workflows/: publish.yml
dfler/: dfler.py
tests/: test_cli.py
