[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dfler"
version = "0.1.0"
description = "Drone Flight Log Entity Recognizer"
readme = "README.md"
authors = [
  { name = "Your Name", email = "your.email@example.com" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.7"
dependencies = [
    "simpletransformers>=0.63.6",
    "seqeval>=1.22.0",
    "pandas",
    "numpy",
    "torch",
    "tqdm",
    "pdfkit",
    "requests",
]

[project.scripts]
dfler = "dfler.dfler:main"

[project.urls]
"Homepage" = "https://github.com/DroneNLP/dfler"
"Bug Tracker" = "https://github.com/DroneNLP/dfler/issues"
